# openenclave

./: CHANGELOG.md
common/: result.c
docs/DesignDocs/: Protected_Code_Loader_Proposal.md
docs/GettingStartedDocs/Contributors/: WindowsSGX1FLCGettingStarted.md  WindowsSGX1GettingStarted.md
enclave/: CMakeLists.txt
enclave/core/sgx/: calls.c  enter.S
enclave/oe_pcl/: CMakeLists.txt  Readme.txt  pcl_crypto.c  pcl_crypto_internal.h  pcl_entry.c  pcl_entry.cpp  pcl_entry_backup.cpp  pcl_internal.h  pcl_mem.c  pcl_mem.cpp
enclave/oe_pcl/crypto/: pcl_crypto.cpp  pcl_crypto_internal.h  pcl_gcm128.c  pcl_md32_common.h
enclave/oe_pcl/unseal/: pcl_tSeal.cpp  pcl_tSeal_internal.cpp  pcl_tSeal_util.cpp  pcl_unseal_internal.h
enclave/oe_pcl/unseal/sim/: pcl_deriv.cpp  pcl_t_instructions.cpp
host/sgx/: create.c  elf.c  enclave.h
include/openenclave/: host.h
include/openenclave/bits/: result.h
include/openenclave/bits/sgx/: sgxtypes.h
include/openenclave/internal/sgx/: pcl_common.h
samples/: BuildSamplesLinux.md  BuildSamplesWindows.md  CMakeLists.txt  README.md
samples/attested_tls/: README.md
samples/helloworld/: README.md
samples/host_verify/: README.md
samples/local_attestation/: README.md
samples/pcl_sample/: CMakeLists.txt  Makefile  helloworld.edl
samples/pcl_sample/enclave/: CMakeLists.txt  enc.c
samples/pcl_sample/host/: host.c
samples/remote_attestation/: README.md
tools/: CMakeLists.txt
tools/oeencrypt/: CMakeLists.txt  encryptip.c  encryptip.h
